# unreact

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile  tree.txt
.github/workflows/: test.yml
assets/routes/: 404.hbs  ~.hbs
assets/routes/news/: $article.hbs
src/: app.rs  config.rs  convert.rs  dev.html  error.rs  files.rs  lib.rs  macros.rs  main.rs  routes.rs  server.rs
src/app/: boilerplate.html  mod.rs  routes.rs
src/convert/: css.rs  hbs.rs  mod.rs  scss.rs
src/convert/partials/: CSS.hbs  ICON.hbs  LINK.hbs  META.hbs  META_EXTRA.hbs
src/files/: mod.rs  tests.rs
src/routes/: convert.rs  files.rs  mod.rs  path.rs
src/server/: 404.html  mod.rs  unwrap.rs  watch.rs
src/server/client-script/: dev.html  watch.html
src/server/files/: 404.html  mod.rs  no-watch.html  watch.html
src/server/script/: dev.html  no-watch.html  watch.html
templates/: boilerplate.hbs  hello.hbs  page.hbs
templates/other/: article.hbs
templates/other/another/: bruh.hbs
tests/: large.rs  small.rs
tests/assets/styles/: global.scss
tests/assets/templates/: boilerplate.hbs  hello.hbs  page.hbs
tests/assets/templates/other/: article.hbs
tests/styles/: global.scss
tests/templates/: 404.hbs  boilerplate.hbs
