[package]
name = "unreact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-str = "0.5.3"
dircpy = "0.3.14"
grass = "0.12.3"
handlebars = "4.3.6"
serde_json = "1.0.94"

http = "0.2.9"
hyper = { version = "0.14.25", features = ["server", "tcp", "http1"] }
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread"] }
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
simple-websockets = "0.1.5"
chrono = "0.4.24"
